--- a/Styles.css
+++ b/Styles.css
@@ -6,18 +6,105 @@
   box-sizing: border-box;
 }
 
+:root {
+  --board-size: 70vh;
+  --board-gap: 0.5vh;
+  --cell-width: calc((var(--board-size) - var(--board-gap) * 2) / 3);
+  --cell-height: var(--cell-width);
+  --background-color: #222;
+}
+
 body {
-  background-color: lightslategray;
+  background-color: var(--background-color);
   display: grid;
   place-content: center;
   width: 100vw;
   height: 100vh;
 }
 
-.test-div {
-  background-color: lightgray;
-  border-radius: 100vh;
-  box-shadow: 0 0 10px 0 black;
-  padding: 20px 40px;
-  text-align: center;
+.game-table {
+  background: white;
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+  height: var(--board-size);
+  width: var(--board-size);
+  gap: var(--board-gap);
+}
+
+.game-cell {
+  background: var(--background-color);
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  display: grid;
+  place-items: center;
+}
+
+[class*="icon"] {
+  width: 0;
+  height: 0;
+  transition: 
+    width 150ms cubic-bezier(0.06, 0.99, 0.65, 1.28),
+    height 150ms cubic-bezier(0.06, 0.99, 0.65, 1.28);
+}
+
+.icon-x {
+  width: calc(var(--cell-width) * 0.9);
+  height: calc(var(--cell-width) * 0.15);
+  background: white;
+  transform:
+    rotate(45deg);
+  position: relative;
+  border-radius: 0.5vh;
+}
+
+.icon-x::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: white;
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  z-index: -1;
+  transform:
+    rotate(90deg);
+  border-radius: 0.5vh;
+}
+
+.icon-o {
+  background: white;
+  border-radius: 50%;
+  width: calc(var(--cell-width) * 0.8);
+  height: calc(var(--cell-width) * 0.8);
+  display: grid;
+  place-items: center;
+}
+
+.icon-o::after {
+  content: "";
+  width: 75%;
+  height: 75%;
+  background: var(--background-color);
+  border-radius: 50%;
+}
+
+.highlight-red {
+  --shadow-color: red;
+  animation: 1s ease-in-out infinite alternate highlight-animation;
+}
+
+.highlight-blue {
+  --shadow-color: blue;
+  animation: 1s ease-in-out infinite alternate highlight-animation;
+}
+
+@keyframes highlight-animation {
+  0% {
+    box-shadow: 0 0 5vw 1vw var(--shadow-color);
+  }
+
+  100% {
+    box-shadow: 0 0 2vw 2vw var(--shadow-color);
+  }
 }
